--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,6 @@ a:hover, a:focus, a:visited {
   align-items: center;
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-color: #f6f6f6;
   font-family: "Nunito Sans", sans-serif;
 }
 .main__box {
@@ -34,7 +32,7 @@ a:hover, a:focus, a:visited {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  position: relative;
+  margin: 10px auto;
   width: 460px;
   border-radius: 5px;
   overflow: hidden;
@@ -88,6 +86,32 @@ a:hover, a:focus, a:visited {
   padding: 20px;
   color: white;
   font-size: 14px;
+}
+.main__pictures {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  gap: 10px 20px;
+  justify-content: center;
+  width: 100%;
+  padding: 10px 10%;
+  box-sizing: border-box;
+}
+.main__picture {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+.main__img {
+  width: 100%;
+  height: 80px;
+  overflow: hidden;
+}
+.main__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 /*# sourceMappingURL=styles.css.map */
