--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,8 +29,6 @@ $Nunito: 'Nunito Sans', sans-serif;
   align-items: center;
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-color: #f6f6f6;
   font-family: $Nunito;
 
   &__box {
@@ -38,7 +36,7 @@ $Nunito: 'Nunito Sans', sans-serif;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    position: relative;
+    margin: 10px auto;
     width: 460px;
     border-radius: 5px;
     overflow: hidden;
@@ -97,6 +95,36 @@ $Nunito: 'Nunito Sans', sans-serif;
       padding: 20px;
       color: white;
       font-size: 14px;
+    }
+  }
+
+  &__pictures {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    gap: 10px 20px;
+    justify-content: center;
+    width: 100%;
+    padding: 10px 10%;
+    box-sizing: border-box;
+  }
+
+  &__picture {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  }
+
+  &__img {
+    width: 100%;
+    height: 80px;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
   }
 }
