--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,17 @@ a:hover, a:focus, a:visited {
   box-sizing: border-box;
   box-shadow: 0 0 10px 5px rgb(221, 221, 221);
 }
+.main__box--lg {
+  width: auto;
+  max-width: 800px;
+}
 .main__field {
   position: relative;
   height: 28px;
   border: 1px solid #f6f6f6;
   padding: 2px 5px;
   box-sizing: border-box;
+  margin-right: 5px;
 }
 .main__field:focus {
   outline: none;
