--- a/css/styles.scss
+++ b/css/styles.scss
@@ -43,6 +43,11 @@ $Nunito: 'Nunito Sans', sans-serif;
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+
+    &--lg {
+      width: auto;
+      max-width: 800px;
+    }
   }
 
   &__field {
@@ -51,6 +56,7 @@ $Nunito: 'Nunito Sans', sans-serif;
     border: 1px solid #f6f6f6;
     padding: 2px 5px;
     box-sizing: border-box;
+    margin-right: 5px;
 
     &:focus {
       outline: none;
