--- a/css/styles.scss
+++ b/css/styles.scss
@@ -112,6 +112,15 @@ $Nunito: 'Nunito Sans', sans-serif;
     width: 100%;
     padding: 10px 10%;
     box-sizing: border-box;
+
+    &--single {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+      position: relative;
+    }
   }
 
   &__picture {
@@ -120,6 +129,14 @@ $Nunito: 'Nunito Sans', sans-serif;
     flex-direction: row;
     justify-content: center;
     width: 100%;
+
+    span {
+      display: block;
+      position: relative;
+      float: left;
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__img {
